distribution/securra-backend/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    control-plane: kubeflow
    istio-injection: enabled
  name: securra-backend
