distribution/securra-backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: securra-backend
  labels:
    app: securra-backend
  namespace: securra-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: securra-backend
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: securra-backend
      annotations:
        sidecar.istio.io/inject: "false"
    spec:
      restartPolicy: Always
      containers:
        - name: securra-backend
          securityContext: {}
          image: "113151489485.dkr.ecr.us-west-2.amazonaws.com/ai.beyond.securra-poc/securra-be:0.0.5"
          imagePullPolicy: Always
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          resources: 
            requests:
              memory: "500Mi"
              cpu: "1000m"
            limits:
              memory: "1.25Gi"
              cpu: "1900m"
          ports:
            - containerPort: 8000
              name: http
              protocol: TCP
      nodeSelector:
        node-class: "front-end" # Even though this is backend, just host this single pod on ng-frontend
      tolerations:
      - key: "only-frontend" # Even though this is backend, just host this single pod on ng-frontend
        operator: "Equal"
        value: "true"
        effect: "NoSchedule"
