distribution/securra-backend/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels: 
    app: securra-backend
  name: securra-backend-api
  namespace: securra-backend
spec:
  selector:
    app: securra-backend
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: 8000
