distribution/securra-backend/securra-backend-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: securra-backend-gateway
  namespace: securra-backend
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - backend.securra.beyond.ai
    port:
      name: http
      number: 80
      protocol: HTTP
    # Upgrade HTTP to HTTPS
    tls:
      httpsRedirect: true
  - hosts:
    - backend.securra.beyond.ai
    port:
      name: https
      number: 443
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: securra-backend-ingressgateway-certs
