distribution/securra-backend/api-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: securra-backend-api
  namespace: securra-backend
spec:
  gateways:
  - securra-backend-gateway
  hosts:
  - backend.securra.beyond.ai
  http:
  - route:
    - destination:
        host: securra-backend-api.securra-backend.svc.cluster.local
        port:
          number: 8000
    corsPolicy:
      allowOrigins:
      - exact: http://localhost:3000
      allowMethods:
      - POST
      - GET
      allowCredentials: true
      allowHeaders:
      - Content-Type
      maxAge: "24h"
